Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • A amd
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,472
    • Issues 1,472
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 0
    • Merge requests 0
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • drm
  • amd
  • Issues
  • #1668
Closed
Open
Issue created Jul 31, 2021 by Mike Lothian@FireBurn

[BISECTED] amdgpu: Move buffer fallback to memcpy unavailable followed by screen freeze

The screen freezes up but I'm still able to ssh in

This is on a PRIME Intel/AMD Laptop and it happens on @agd5f & @airlied drm-next branches - Linus's tree still works fine

I'll try and bisect over the weekend

ttm.dmesg

amdgpu: Move buffer fallback to memcpy unavailable
[TTM] Buffer eviction failed
------------[ cut here ]------------
WARNING: CPU: 2 PID: 163 at kthread_stop+0xa4/0x120
Modules linked in:
CPU: 2 PID: 163 Comm: kworker/2:2 Tainted: G     U            5.13.0-rc7-agd5f+ #1235
Hardware name: Alienware Alienware 15 R2/0H6J09, BIOS 1.12.0 03/04/2021
Workqueue: pm pm_runtime_work
RIP: 0010:kthread_stop+0xa4/0x120
Code: fd ff eb 07 8d 48 ff 09 c1 78 23 0f 1f 44 00 00 89 e8 5b 41 5e 5d c3 be 02 00 00 00 4c 89 f7 e8 02 cf 48 00 f6 43 2e 20 75 8c <0f> 0b eb 88 4c 89 f7 be 03 00 00 00 e8 eb ce 48 00 eb ce 65 8b 05
RSP: 0018:ffff88810281bcc0 EFLAGS: 00010246
RAX: 0000000000000001 RBX: ffff888101c71c80 RCX: 0000000000000003
RDX: 0000000000000000 RSI: 0000000000000001 RDI: ffff888101c71c80
RBP: 0000000000000000 R08: 0000000000000001 R09: ffff888100042900
R10: ffff88819390e100 R11: 0000000000000000 R12: ffff888101c80000
R13: ffff888101c89848 R14: ffff888101c71ca8 R15: ffff88810281bcfc
FS:  0000000000000000(0000) GS:ffff8888a1c80000(0000) knlGS:0000000000000000
CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 00002c6401744000 CR3: 000000000320c004 CR4: 00000000001706a0
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
Call Trace:
 ? drm_sched_fini+0x17/0x130
 ? amdgpu_fence_driver_hw_fini+0x5f/0xd0
 ? amdgpu_device_suspend+0x28d/0x2b0
 ? amdgpu_pmops_runtime_suspend+0x71/0xf0
 ? pci_pm_resume_noirq+0x140/0x140
 ? pci_pm_runtime_suspend+0x4e/0x180
 ? pci_pm_resume_noirq+0x140/0x140
 ? __rpm_callback+0x8c/0x2f0
 ? pci_pm_resume_noirq+0x140/0x140
 ? rpm_suspend+0x2e7/0x740
 ? pick_next_task_fair+0xed/0x3b0
 ? pm_runtime_work+0x82/0xa0
 ? process_one_work+0x1d8/0x570
 ? worker_thread+0x26d/0x4a0
 ? kthread+0x180/0x190
 ? process_one_work+0x570/0x570
 ? kthread_blkcg+0x30/0x30
 ? ret_from_fork+0x1f/0x30
---[ end trace f6309f333194dc4f ]---
BUG: kernel NULL pointer dereference, address: 0000000000000000
#PF: supervisor write access in kernel mode
#PF: error_code(0x0002) - not-present page
PGD 0 P4D 0 
Oops: 0002 [#1] SMP NOPTI
CPU: 2 PID: 163 Comm: kworker/2:2 Tainted: G     U  W         5.13.0-rc7-agd5f+ #1235
Hardware name: Alienware Alienware 15 R2/0H6J09, BIOS 1.12.0 03/04/2021
Workqueue: pm pm_runtime_work
RIP: 0010:kthread_stop+0x37/0x120
Code: 8d 73 28 be 01 00 00 00 b8 01 00 00 00 f0 0f c1 43 28 85 c0 74 6e 8d 48 01 09 c1 78 6c f6 43 2e 20 74 74 48 8b ab 20 05 00 00 <f0> 80 4d 00 02 48 89 df e8 6c fe ff ff 48 89 df be 03 00 00 00 31
RSP: 0018:ffff88810281bcc0 EFLAGS: 00010246
RAX: 0000000000000001 RBX: ffff888101c71c80 RCX: 0000000000000003
RDX: 0000000000000000 RSI: 0000000000000001 RDI: ffff888101c71c80
RBP: 0000000000000000 R08: 0000000000000001 R09: ffff888100042900
R10: ffff88819390e100 R11: 0000000000000000 R12: ffff888101c80000
R13: ffff888101c89848 R14: ffff888101c71ca8 R15: ffff88810281bcfc
FS:  0000000000000000(0000) GS:ffff8888a1c80000(0000) knlGS:0000000000000000
CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 0000000000000000 CR3: 000000000320c004 CR4: 00000000001706a0
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
Call Trace:
 ? drm_sched_fini+0x17/0x130
 ? amdgpu_fence_driver_hw_fini+0x5f/0xd0
 ? amdgpu_device_suspend+0x28d/0x2b0
 ? amdgpu_pmops_runtime_suspend+0x71/0xf0
 ? pci_pm_resume_noirq+0x140/0x140
 ? pci_pm_runtime_suspend+0x4e/0x180
 ? pci_pm_resume_noirq+0x140/0x140
 ? __rpm_callback+0x8c/0x2f0
 ? pci_pm_resume_noirq+0x140/0x140
 ? rpm_suspend+0x2e7/0x740
 ? pick_next_task_fair+0xed/0x3b0
 ? pm_runtime_work+0x82/0xa0
 ? process_one_work+0x1d8/0x570
 ? worker_thread+0x26d/0x4a0
 ? kthread+0x180/0x190
 ? process_one_work+0x570/0x570
 ? kthread_blkcg+0x30/0x30
 ? ret_from_fork+0x1f/0x30
Modules linked in:
CR2: 0000000000000000
---[ end trace f6309f333194dc50 ]---
RIP: 0010:kthread_stop+0x37/0x120
Code: 8d 73 28 be 01 00 00 00 b8 01 00 00 00 f0 0f c1 43 28 85 c0 74 6e 8d 48 01 09 c1 78 6c f6 43 2e 20 74 74 48 8b ab 20 05 00 00 <f0> 80 4d 00 02 48 89 df e8 6c fe ff ff 48 89 df be 03 00 00 00 31
RSP: 0018:ffff88810281bcc0 EFLAGS: 00010246
RAX: 0000000000000001 RBX: ffff888101c71c80 RCX: 0000000000000003
RDX: 0000000000000000 RSI: 0000000000000001 RDI: ffff888101c71c80
RBP: 0000000000000000 R08: 0000000000000001 R09: ffff888100042900
R10: ffff88819390e100 R11: 0000000000000000 R12: ffff888101c80000
R13: ffff888101c89848 R14: ffff888101c71ca8 R15: ffff88810281bcfc
FS:  0000000000000000(0000) GS:ffff8888a1c80000(0000) knlGS:0000000000000000
CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 0000000000000000 CR3: 000000012465c002 CR4: 00000000001706a0
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
Edited Jul 31, 2021 by Mike Lothian
Assignee
Assign to
Time tracking